feat: similarity quantification of aligned images to the destination image

--- a/camera_calibration.ipynb
+++ b/camera_calibration.ipynb
@@ -332,6 +332,55 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Similarity Analysis\n",
+    "The similarity between the two warped images is compared to the destination image, as a quantative measure of the results"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "source": [
+    "# import the necessary packages\n",
+    "from skimage.metrics import structural_similarity"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "source": [
+    "dst_gray = cv2.cvtColor(mpimg.imread(dst_path), cv2.COLOR_RGB2GRAY)\n",
+    "dst_gray = cv2.undistort(dst_gray, mtx, dist, None, mtx)\n",
+    "aligned_gray = cv2.cvtColor(aligned_img, cv2.COLOR_RGB2GRAY)\n",
+    "normalized_aligned_gray = cv2.cvtColor(normalized_aligned_img, cv2.COLOR_RGB2GRAY)\n",
+    "aligned_score, aligned_diff = structural_similarity(dst_gray, aligned_gray, full=True)\n",
+    "normalized_aligned_score, normalized_aligned_diff = structural_similarity(dst_gray, normalized_aligned_gray, full=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "print('Structural Similarity (Aligned vs. Normalized-Aligned): {}/{}'.format(aligned_score, normalized_aligned_score))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Structural Similarity (Aligned vs. Normalized-Aligned): 0.5380406664495423/0.5465601025399025\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
